--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,15 @@
 {
+  "ConnectionStrings": {
+    "SQLite": "DataSource=Songs.db"
+  },
+
+  "Elastic": {
+    "Index": "songs",
+    "Url": "https://localhost:9200",
+    "Username": "elastic",
+    "Password": "tDjMq*Bt+F8-NG4PqWmj"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
