--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,7 +7,7 @@
     "Index": "songs",
     "Url": "https://localhost:9200",
     "Username": "elastic",
-    "Password": "tDjMq*Bt+F8-NG4PqWmj"
+    "Password": "RQ3jMmEAjbXhih=*D6td"
   },
 
   "Logging": {
